# libfprint-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  image.pgm  print
.github/workflows/: rust.yml
examples/: enroll.rs  print  verify.rs
libfprint-sys/: Cargo.toml  build.rs  wrapper.h
libfprint-sys/src/: lib.rs
prints/: print0  print1  print2  print3  print4  print5  print6  print7  print8  print9
src/: context.rs  error.rs  finger.rs  image.rs  lib.rs  print.rs  utils.rs
src/device/: callback.rs  device.rs  device_list.rs  device_sync.rs  enums.rs  extern_fn.rs  fp_device.rs  mod.rs  user_data.rs
