[package]
name = "libfprint-rs"
repository = "https://github.com/alvaroparker/libfprint-rs"
version = "0.2.2"
edition = "2021"
description = "Rust library for accesing fingerprint devices."
keywords = ["libfprint", "sensor", "hardware", "linux"]
license = "MIT"
documentation = "https://alvaroparker.github.io/libfprint-docs/libfprint_rs/index.html"
exclude = [".github"]

[dependencies]
libfprint-sys = { path = "libfprint-sys", version = "0.1.8" }
gio = "0.18.1"
glib = "0.18.1"

[workspace]
members = ["libfprint-sys"]
