[package]
name = "libfprint-rs"
repository = "https://github.com/alvaroparker/libfprint-rs"
version = "0.3.1"
edition = "2024"
description = "Rust library for accesing fingerprint devices."
keywords = ["libfprint", "sensor", "hardware", "linux"]
license = "MIT"
documentation = "https://docs.rs/libfprint-rs/latest/libfprint_rs/index.html"
exclude = [".github"]

[dependencies]
libfprint-sys = { path = "libfprint-sys", version = "0.2.0" }
gio = "0.21.4"
glib = "0.21.4"

[workspace]
members = ["libfprint-sys"]
